# tidyllm-sentence

./: .gitignore  EXHIBIT_1_ACADEMIC_BENCHMARK.md  MANIFEST.in  README.md  academic_benchmark.py  benchmark_analysis.py  benchmark_comparison_ascii.py  debug_transformer.py  paranoid_validation.py  paranoid_validation_ascii.py  pyproject.toml  quick_team_benchmark.py  requirements.txt  setup.py  similarity_investigation.py  test_demo.py  test_integration.py  test_preprocessing.py  test_transformer_embeddings.py  transformer_exploration.py
.github/workflows/: tests.yml
benchmarks/: benchmark_comparison.py  constitutional_analysis.py  tlm_team_advantage.py  transformer_benchmark.py
docs/: FINAL_RABBIT_SUMMARY.md  PROFESSOR_QUICKSTART.md  README.md  TLM_TEAM_STRATEGY.md  YRSN_INTEGRATION.md
examples/: 01_analogical_reasoning.py  02_embedding_methods.py  README.md  professor_demo.py  professor_demo_ascii.py
tidyllm_sentence/: __init__.py  reasoning.py
tidyllm_sentence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tidyllm_sentence/lsa/: __init__.py  embeddings.py
tidyllm_sentence/ngram/: __init__.py  embeddings.py
tidyllm_sentence/power_mean/: __init__.py  embeddings.py
tidyllm_sentence/pretrained/: __init__.py  loaders.py
tidyllm_sentence/sif/: __init__.py  embeddings.py
tidyllm_sentence/tests/: test_comprehensive.py  test_embeddings.py  test_performance.py  test_sentence_transformer_wrapper.py  test_validation.py  test_validation_errors.py
tidyllm_sentence/tfidf/: __init__.py  embeddings.py
tidyllm_sentence/transformer/: __init__.py  (+1 more)
(+9 files in other folders)
